Enabled push notifications via OneSignal & fixed minification compile errors
This change addresses the need by:

* Installed and set up OneSignal+GCM including a manifest.json
* Fixed all the es6 compile errors and re-enabled standard-minifier-js for minification

--- a/imports/ui/components/paper-navigation/paper-navigation.html
+++ b/imports/ui/components/paper-navigation/paper-navigation.html
@@ -71,14 +71,14 @@
                 <div hide-xs>Search</div>
               </paper-tab>
 
-              <!-- <paper-tab selected-page='/messages'>
+              <paper-tab selected-page='/talk'>
+                <iron-icon hide-sm icon='fsn:talk'></iron-icon>
+                <div hide-xs>Townhall</div>
+              </paper-tab>
+
+              <paper-tab selected-page='/messages'>
                 <iron-icon hide-sm icon='fsn:messages'></iron-icon>
                 <div hide-xs>Messages</div>
-              </paper-tab> -->
-
-              <paper-tab selected-page='/talk'>
-                <iron-icon hide-sm icon='fsn:messages'></iron-icon>
-                <div hide-xs>Talk</div>
               </paper-tab>
 
               <paper-tab selected-page='/profile'>
@@ -86,14 +86,15 @@
                 <div hide-xs>Profile</div>
               </paper-tab>
             </paper-tabs>
-
+            <!--
             <a href='https://feedback.userreport.com/dfcde2cd-6c6d-4d0a-a4c3-cce340dfd149/' target='_blank'>
               <paper-button>
                 <iron-icon hide-sm icon='fsn:ideas'></iron-icon>
                 <div hide-xs class='hide-xs'>Give Feedback</div>
               </paper-button>
             </a>
-          <!-- <a href='https://fb.me/msg/houseme'><paper-button>Chat with us</paper-button>               -->
+             -->
+             <!-- <a href='https://fb.me/msg/houseme'><paper-button>Chat with us</paper-button>               -->
         </nav>
     </paper-toolbar>
 
