--- a/imports/ui/views/messages-view.html
+++ b/imports/ui/views/messages-view.html
@@ -1,18 +1,13 @@
-
-<dom-module id="messages-view">
-
+<dom-module id='messages-view'>
   <template>
-    <style include="view-styles"></style>
+    <style include='view-styles'></style>
     <style>
-
       :host {
         @apply(--fill-view);
-        /*@apply(--bg-img);*/
       }
 
       paper-material {
         background: white;
-        /*height: calc(100vh - 64px);        */
       }
 
       .no-gutter > [class*='col-'] {
@@ -29,7 +24,6 @@
           height: calc(70vh - 64px) !important;
         }
       }
-
     </style>
 
     <paper-material class='container' elevation='3'>
@@ -37,21 +31,24 @@
       <h1>otherUserId</h1>
   		<div class='row row-eq-height no-gutter'>
         <fsn-messaging-list class='col-xs-12 col-md-4' other-user-id={{otherUserId}} message-id={{messageId}}></fsn-messaging-list>
-        <fsn-messaging-chat class='col-xs-12 col-md-8' other-user-id=[[otherUserId]] message-id=[[messageId]]></fsn-messaging-chat>
       </div>
     </paper-material>
 
   </template>
 </dom-module>
 
-
 <script>
   require('@polymer/polymer/polymer.html');
   require('@polymer/paper-material/paper-material.html');
 
   require('@andreasgalster/fsn-boilerplate/dist/fsn-boilerplate.html');
-  require('@andreasgalster/fsn-messaging-list/dist/fsn-messaging-list.html');
-  require('@andreasgalster/fsn-messaging-chat/dist/fsn-messaging-chat.html');
+  // require('@andreasgalster/fsn-messaging-list/dist/fsn-messaging-list.html');
+  // require('@andreasgalster/fsn-messaging-chat/dist/fsn-messaging-chat.html');
+
+  require('../components/fsn-messaging-list/src/fsn-messaging-list.html');
+  require('../components/fsn-messaging-chat/src/fsn-messaging-chat.html');
+
+
 
   Polymer({
     is: 'messages-view',
