--- a/imports/ui/views/search-view.html
+++ b/imports/ui/views/search-view.html
@@ -1,14 +1,13 @@
-<dom-module id="search-view">
+<dom-module id='search-view'>
   <template>
-    <style include="view-styles"></style>
+    <style include='view-styles'></style>
     <style>
       :host {
         @apply(--fill-view);
-        /*@apply(--bg-img);*/
       }
     </style>
 
-    <search-users other-user-id={{otherUserId}}></search-users>
+    <search-users></search-users>
   </template>
 </dom-module>
 
@@ -21,12 +20,6 @@
   require('../components/search-users/search-users.html');
 
   Polymer({
-    is: 'search-view',
-    properties: {
-      otherUserId: {
-        type: String,
-        notify: true
-      }
-    }
+    is: 'search-view'
   });
 </script>
