--- a/imports/ui/views/signup-view.html
+++ b/imports/ui/views/signup-view.html
@@ -1,46 +1,37 @@
-
-<dom-module id="signup-view">
-
+<dom-module id='signup-view'>
   <template>
-  <style include="view-styles"></style>
-  <style>
-
-    :host {
-      @apply(--fixed-view);
-      @apply(--scroll-view);
-      @apply(--bg-img);
-    }
-
-    fsn-text-swapper {
-      margin-top:120px;
-    }
-
-
-    fsn-fblogin-button {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-top:150px;
-    }
-
-    @media screen and (max-width: 480px) {
-
-      /*white-space: normal;*/
+    <style include='view-styles'></style>
+    <style>
+      :host {
+        @apply(--fixed-view);
+        @apply(--scroll-view);
+        @apply(--bg-img);
+      }
 
       fsn-text-swapper {
-        margin-top: 70px;
+        margin-top:120px;
       }
 
       fsn-fblogin-button {
-        margin-top: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top:150px;
       }
-    }
 
-  </style>
+      @media screen and (max-width: 480px) {
+        fsn-text-swapper {
+          margin-top: 70px;
+        }
 
-  <fsn-text-swapper></fsn-text-swapper>
-  <fsn-fblogin-button redirect-to='profile'></fsn-fblogin-button>
+        fsn-fblogin-button {
+          margin-top: 60px;
+        }
+      }
+    </style>
 
+    <fsn-text-swapper></fsn-text-swapper>
+    <fsn-fblogin-button redirect-to='profile'></fsn-fblogin-button>
   </template>
 </dom-module>
 
