--- a/imports/ui/components/profile-sidebar/profile-sidebar.html
+++ b/imports/ui/components/profile-sidebar/profile-sidebar.html
@@ -48,7 +48,7 @@
     <!-- <meteor-user user={{user}}></meteor-user> -->
     <!-- <meteor-subscribe name='user' args='[]'></meteor-subscribe> -->
 
-    <img src="http://graph.facebook.com/[[user.services.facebook.id]]/picture?type=large" />
+    <img src="https://graph.facebook.com/[[user.services.facebook.id]]/picture?type=large" />
     <h1>[[user.services.facebook.first_name]]</h1>
 
 <!--
