--- a/imports/ui/views/messages-view.html
+++ b/imports/ui/views/messages-view.html
@@ -27,10 +27,9 @@
     </style>
 
     <paper-material class='container' elevation='3'>
-      <h1>[[otherUserId]]</h1>
-      <h1>otherUserId</h1>
   		<div class='row row-eq-height no-gutter'>
-        <fsn-messaging-list class='col-xs-12 col-md-4' other-user-id={{otherUserId}} message-id={{messageId}}></fsn-messaging-list>
+        <fsn-messaging-list class='col-xs-12 col-md-4' message-id={{messageId}}></fsn-messaging-list>
+        <fsn-messaging-chat class='col-xs-12 col-md-8' message-id=[[messageId]] to-user-id=[[toUserId]]></fsn-messaging-chat>
       </div>
     </paper-material>
 
@@ -42,19 +41,22 @@
   require('@polymer/paper-material/paper-material.html');
 
   require('@andreasgalster/fsn-boilerplate/dist/fsn-boilerplate.html');
-  // require('@andreasgalster/fsn-messaging-list/dist/fsn-messaging-list.html');
-  // require('@andreasgalster/fsn-messaging-chat/dist/fsn-messaging-chat.html');
+  require('@andreasgalster/fsn-messaging-list/dist/fsn-messaging-list.html');
+  require('@andreasgalster/fsn-messaging-chat/dist/fsn-messaging-chat.html');
 
-  require('../components/fsn-messaging-list/src/fsn-messaging-list.html');
-  require('../components/fsn-messaging-chat/src/fsn-messaging-chat.html');
+  // require('../components/fsn-messaging-list/src/fsn-messaging-list.html');
+  // require('../components/fsn-messaging-chat/src/fsn-messaging-chat.html');
 
 
 
   Polymer({
     is: 'messages-view',
     properties: {
-      otherUserId: String,
+      toUserId: String,
       messageId: String
+    },
+    attached: function() {
+      this.fire('message-userid-ready');
     }
   });
 </script>
