--- a/imports/ui/views/main-view.html
+++ b/imports/ui/views/main-view.html
@@ -77,7 +77,7 @@
           </template>
 
           <template is='iron-lazy-page' data-route='/messages'>
-            <messages-view to-user-id=[[toUserId]]></messages-view>
+            <messages-view to-user-id=[[toUserId]] user-selected=[[toUserId]]></messages-view>
           </template>
 
           <template is='iron-lazy-page' data-route='/search'>
@@ -115,14 +115,10 @@ require('../components/paper-navigation/paper-navigation.html');
 
 Polymer({
   is: 'main-view',
-  behaviors: [mwcMixin],
   properties: {
     toUserId: {
       type: String,
     }
-  },
-  attached: function() {
-    this.subscribe('PrivateMessagesUsers');
   },
   observers: [
     // '_lockScroll(isLoading)',
